# threat-designer-change

./: .babelrc  .eslintrc.json  .gitignore  .prettierrc  README.md  THIRD_PARTY_LICENSES  constants_validation_report.md  deployment.sh  destroy.sh  index.html  package-lock.json  package.json  vite.config.js
backend/app/: index.py  openapi.yml
backend/app/exceptions/: exceptions.py
backend/app/routes/: threat_designer_route.py
backend/app/services/: threat_designer_service.py
backend/app/utils/: utils.py
backend/authorizer/: index.py
backend/dependencies/: requirements-authorizer.txt  requirements-langchain.txt
backend/threat_designer/: agent.py  config.py  constants.py  exceptions.py  index.py  message_builder.py  model.py  model_service.py  model_utils.py  monitoring.py  nodes.py  prompts.py  state.py  state_tracking_service.py  utils.py  workflow.py
infra/: amplify.tf  api_gateway.tf  authorizer.tf  build.sh  build.tf  cognito.tf  data.tf  dynamodb.tf  lambda.tf  layers.tf  locals.tf  main.tf  outputs.tf  s3.tf  variables.tf
infra/templates/: amplify_execution_role_policy.json  amplify_trust_policy.json  auth_lambda_execution_role_policy.json  backend_lambda_execution_role_policy.json  iam_role_assume_role_policy.json  threat_designer_lambda_role_policy.json
mcp-server/: README.md  pyproject.toml
mcp-server/threat_designer_mcp/: __init__.py  server.py  state.py  utils.py
public/: manifest.json
src/: App.css  App.jsx  Main.jsx  SplitPanelContext.jsx  bootstrap.jsx  config.js  customTheme.jsx  index.css  index.jsx
src/services/: MakeAPICall.jsx
(+47 files in other folders)
